complete products models

--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -2,5 +2,8 @@
 
 @code {
 
-    //private static List<Product> 
+    private static List<Product> Products = new List<Product>
+    {
+        
+    };
 }
