--- a/Ecommerce.UI/Client/_Imports.razor
+++ b/Ecommerce.UI/Client/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using Ecommerce.UI.Client
 @using Ecommerce.UI.Client.Shared
-@using Ecommerce.UI.Shared
+@using Ecommerce.UI.Shared.Product
