--- a/Ecommerce.UI/Client/Pages/FetchData.razor
+++ b/Ecommerce.UI/Client/Pages/FetchData.razor
@@ -27,10 +27,10 @@ else
             @foreach (var forecast in forecasts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>stuffs</td>
+                    <td>stuffs</td>
+                    <td>stuffs</td>
+                    <td>stuffs</td>
                 </tr>
             }
         </tbody>
@@ -38,10 +38,10 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private string[]? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        forecasts = await Http.GetFromJsonAsync<string[]>("WeatherForecast");
     }
 }
