get product by mock

--- a/Ecommerce.UI/Client/_Imports.razor
+++ b/Ecommerce.UI/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using Ecommerce.UI.Client
 @using Ecommerce.UI.Client.Shared
+@using Ecommerce.UI.Client.Shared.Product
 @using Ecommerce.UI.Shared.Product
