--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -1,115 +1,147 @@
 ﻿<h3>ProductList</h3>
 
+<lu class="list-unstyled">
+    @foreach (var item in Products)
+    {
+        <li class="media my-3">
+            @foreach (var itemImg in @item.images)
+            {
+                <div class="media-img-wrapper mr-2">
+                    <a href="#">
+                        <img calss="media img" src="@itemImg.url" alt="@item.slug" />
+                    </a>
+                </div>
+            }       
+            <div class="media-body">
+                <a href="#">
+                    <h4 class="mb-0">@item.slug</h4>
+                </a>
+                <p>@item.slug </p>
+                <h5 class="price">$@item.minQty </h5>
+            </div>
+        </li>
+    }
+</lu>
+
 @code {
 
-    private static Product Products = new Product
+    private static List<Product> Products = new List<Product>
     {
-        id  =  "" // Id of product
-        ,
-        name = "" // Name of product
-        ,
-        type = "" // Type of product, currently it is always key
-        ,
-        slug = ""  // Slug of product
-        ,
-        qty = ""// Qty of product available to buy
-        ,
-        minQty = 1// Minimum product quantity available to buy
-        ,
-        retail_min_price = 1 // minimal product price for retail users in EUR with fees.
-        ,
-        retailMinBasePrice = 1 // minimal product price for retail users in EUR without fees. Price set by seller while adding offer.
-        ,
-        thumbnail = ""// Url to image
-        ,
-        smallImage = "" // Url to thumbnail image
-        ,
-        coverImage = "" // Url to cover image
-        ,images = new List<Image> { }// Url list to all images in full resolution
-        ,
-        updated_at = "" // 	date of last update
-        ,
-        release_date = "" // Product release date
-        ,
-        region = ""// Region of product eg. GLOBAL, EUROPE, AMERICA, NORTH AMERICA, RU/CIS, SOUTH EASTERN ASIA, WESTERN ASIA, GERMANY, INDIA, POLAND, UNITED KINGDOM etc.
-        ,
-        developer = ""// Developer name of product
-        ,
-        publisher = "" // Publisher name of product
-        ,
-        platform = "" // Platform eg. Steam, Origin, Uplay, GOG, Xbox, Apple, Gameforge, Oculus Rift, HTC Vive, PSN, Blizzard
-        ,priceLimit = new PriceLimit
+        new Product
         {
-            mim = 1
+            id  =  "" // Id of product
             ,
-            max = 1
-        }  // Price value possible to set while adding/updating offer. Higher than max or lower than min are not possible to use.
-       ,restrictions = new Restriction
-       {
-            pegi_discrimination = false
+            name = "" // Name of product
             ,
-            pegi_drugs = false
+            type = "" // Type of product, currently it is always key
             ,
-            pegi_fear = false
+            slug = ""  // Slug of product
             ,
-            pegi_gambling = false
+            qty = ""// Qty of product available to buy
             ,
-            pegi_online = false
+            minQty = 1// Minimum product quantity available to buy
             ,
-            pegi_sex = false
+            retail_min_price = 1 // minimal product price for retail users in EUR with fees.
             ,
-            pegi_profanity = false
+            retailMinBasePrice = 1 // minimal product price for retail users in EUR without fees. Price set by seller while adding offer.
             ,
-            pegi_violence = false
-       }  // PEGI restrictions
-       ,requirements = new Requirement
-       {
-            minimal = new Minimal
+            thumbnail = ""// Url to image
+            ,
+            smallImage = "" // Url to thumbnail image
+            ,
+            coverImage = "" // Url to cover image
+            ,images = new List<Image>
             {
-                reqdiskspace = ""
+                new Image
+                {
+                    url = "https://images.g2a.com/1024x768/1x1x0/marvels-spider-man-remastered-pc-steam-key-global-i10000302546004/799cf76f63324301a0b19a4a"
+                }
+            }// Url list to all images in full resolution
+            ,
+            updated_at = "" // 	date of last update
+            ,
+            release_date = "" // Product release date
+            ,
+            region = ""// Region of product eg. GLOBAL, EUROPE, AMERICA, NORTH AMERICA, RU/CIS, SOUTH EASTERN ASIA, WESTERN ASIA, GERMANY, INDIA, POLAND, UNITED KINGDOM etc.
+            ,
+            developer = ""// Developer name of product
+            ,
+            publisher = "" // Publisher name of product
+            ,
+            platform = "" // Platform eg. Steam, Origin, Uplay, GOG, Xbox, Apple, Gameforge, Oculus Rift, HTC Vive, PSN, Blizzard
+            ,priceLimit = new PriceLimit
+            {
+                mim = 1
                 ,
-                reqgraphics = ""
+                max = 1
+            }  // Price value possible to set while adding/updating offer. Higher than max or lower than min are not possible to use.
+           ,restrictions = new Restriction
+           {
+                pegi_discrimination = false
                 ,
-                reqmemory = ""
+                pegi_drugs = false
                 ,
-                reqother = ""
+                pegi_fear = false
                 ,
-                reqprocessor = ""
+                pegi_gambling = false
                 ,
-                reqsystem = ""
+                pegi_online = false
+                ,
+                pegi_sex = false
+                ,
+                pegi_profanity = false
+                ,
+                pegi_violence = false
+           }  // PEGI restrictions
+           ,requirements = new Requirement
+           {
+                minimal = new Minimal
+                {
+                    reqdiskspace = ""
+                    ,
+                    reqgraphics = ""
+                    ,
+                    reqmemory = ""
+                    ,
+                    reqother = ""
+                    ,
+                    reqprocessor = ""
+                    ,
+                    reqsystem = ""
 
-            }
-            , recommended = new Recommended
-            {
-                reqdiskspace = ""
-                ,
-                reqgraphics = ""
-                ,
-                reqmemory = ""
-                ,
-                reqother = ""
-                ,
-                reqprocessor = ""
-                ,
-                reqsystem = ""
-            }
-       }// Requirements
-       ,videos = new Video[]
-       {
-           new Video
+                }
+                , recommended = new Recommended
+                {
+                    reqdiskspace = ""
+                    ,
+                    reqgraphics = ""
+                    ,
+                    reqmemory = ""
+                    ,
+                    reqother = ""
+                    ,
+                    reqprocessor = ""
+                    ,
+                    reqsystem = ""
+                }
+           }// Requirements
+           ,videos = new Video[]
            {
-                type = ""
-                , url = ""
-           }
-           , 
-       } // Videos
-       ,categories = new Categories[]
-       {
-            new Categories
+               new Video
+               {
+                    type = ""
+                    , url = ""
+               }
+               ,
+           } // Videos
+           ,categories = new Categories[]
            {
-                id = ""
-                , name = ""
-           }
-       }  // Categories
+                new Categories
+               {
+                    id = ""
+                    , name = ""
+               }
+           }  // Categories
+        }
     };
 }
