migrations ok apparently

--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -95,8 +95,7 @@
            }  // PEGI restrictions
            ,requirements = new Requirement
            {
-                minimal = new List<Minimal>
-                {
+                Minimal = 
                     new Minimal
                     {
                         reqdiskspace = ""
@@ -112,9 +111,7 @@
                         reqsystem = ""
                     }
 
-                }
-                , recommended = new List<Recommended>
-                {
+                , Recommended = 
                     new Recommended
                     {
                         reqdiskspace = ""
@@ -129,7 +126,7 @@
                         ,
                         reqsystem = ""
                     }
-                }
+                
            }// Requirements
            ,videos = new List<Video>
            {
@@ -144,7 +141,7 @@
            {
                 new Categories
                {
-                    id = ""
+                    Id = 0
                     , name = ""
                }
            }  // Categories
