--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -1,4 +1,5 @@
-﻿@inject Ecommerce.UI.Client.Interface.IProductService.IProductService ProductService
+﻿
+@inject Ecommerce.UI.Client.Interface.IProductService.IProductService ProductService
 @implements IDisposable
 
 @if (ProductService.Products == null || ProductService.Products.Products.Count == 0)
