--- a/Ecommerce.UI/Client/_Imports.razor
+++ b/Ecommerce.UI/Client/_Imports.razor
@@ -10,3 +10,5 @@
 @using Ecommerce.UI.Client.Shared
 @using Ecommerce.UI.Client.Shared.Product
 @using Ecommerce.UI.Shared.Product
+@using Ecommerce.UI.Client.Interface.IAuthService
+@using Ecommerce.UI.Shared.User
