--- a/Ecommerce.UI/Client/_Imports.razor
+++ b/Ecommerce.UI/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using Ecommerce.UI.Shared.Product
 @using Ecommerce.UI.Client.Interface.IAuthService
 @using Ecommerce.UI.Shared.User
+@using Ecommerce.UI.Client.Interface.IProductService
