--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -36,6 +36,7 @@ else
 
     protected override void OnInitialized()
     {
+        ProductService.GetProducts();
         ProductService.ProductsChanged += StateHasChanged;
     }
 
