--- a/Ecommerce.UI/Client/Pages/Index.razor
+++ b/Ecommerce.UI/Client/Pages/Index.razor
@@ -7,8 +7,8 @@
 
 @code{
 
-    protected override async Task OnParametersSetAsync()
-    {
-        await ProductService.GetProducts();
-    }
+    //protected override async Task OnParametersSetAsync()
+    //{
+    //    await ProductService.GetProducts();
+    //}
 }
