--- a/Ecommerce.UI/Client/Pages/Index.razor
+++ b/Ecommerce.UI/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
-@inject IProductService ProductService
 
 <PageTitle>My shop</PageTitle>
+<MudText Typo="Typo.h1">My shop</MudText>
 
 <ProductList />
 
