--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -1,5 +1,4 @@
-﻿
-@inject IProductService ProductService
+﻿@inject IProductService ProductService
 @implements IDisposable
 
 @if (ProductService.Products == null || ProductService.Products.Products.Count == 0)
@@ -8,7 +7,7 @@
 }
 else
 {
-    <lu class="list-unstyled">
+    @*<lu class="list-unstyled">
         @foreach (var item in ProductService.Products.Products)
         {
             <li>
@@ -29,10 +28,91 @@ else
                 </div>
             </li>
         }
-    </lu>
+    </lu>*@
+
+    @*<MudCarousel Class="mud-width-full" Style="height:200px;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
+        <MudCarouselItem Transition="transition" Color="@Color.Primary">
+            <div class="d-flex" style="height:100%">
+                <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
+            </div>
+        </MudCarouselItem>
+        <MudCarouselItem Transition="transition" Color="@Color.Primary">
+            <div class="d-flex" style="height:100%">
+                <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
+            </div>
+        </MudCarouselItem>
+    </MudCarousel>
+    <MudSelect @bind-Value="transition" Label="Transition" Class="ma-2">
+        <MudSelectItem Value="@Transition.Fade">Fade</MudSelectItem>
+        <MudSelectItem Value="@Transition.Slide">Slide</MudSelectItem>
+        <MudSelectItem Value="@Transition.None">None</MudSelectItem>
+    </MudSelect>
+    <MudSwitch @bind-Checked="@arrows" Color="Color.Primary">Show Arrows</MudSwitch>
+    <MudSwitch @bind-Checked="@bullets" Color="Color.Primary">Show Bullets</MudSwitch>
+    <MudSwitch @bind-Checked="@enableSwipeGesture" Color="Color.Primary">Enable Swap Gesture</MudSwitch>
+    <MudSwitch @bind-Checked="@autocycle" Color="Color.Primary">Auto Cycle (Default: 5 secs)</MudSwitch>
+    *@
+
+    @foreach (var item in ProductService.Products.Products)
+    {
+        <MudCard Class="responsive img-fluid" Style="height:2%; width:25%; display: inline-flex;">
+            <MudCardContent Class="responsive">
+                <div>
+                    <img class="responsive" src="@item.Images[0]" alt="teste">
+                </div>
+                <MudText Typo="Typo.body1">@item.Name</MudText>
+            </MudCardContent>
+            <MudCardActions Class="responsive" Style="display: inline-block;">
+                <MudButton Variant="Variant.Text" Color="Color.Primary">Details</MudButton>
+            </MudCardActions>
+        </MudCard>
+    }
+
+    @*<MudCard>
+        <MudCardHeader>
+            <CardHeaderAvatar>
+                <MudAvatar Color="Color.Secondary">I</MudAvatar>
+            </CardHeaderAvatar>
+            <CardHeaderContent>
+                <MudText Typo="Typo.body1">Istra Croatia</MudText>
+                <MudText Typo="Typo.body2">Peninsula in Europe</MudText>
+            </CardHeaderContent>
+            <CardHeaderActions>
+                <MudIconButton Icon="@Icons.Material.Filled.Settings" Color="Color.Default" />
+            </CardHeaderActions>
+        </MudCardHeader>
+        <MudCarousel Class="mud-width-full" Style="height:200px;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
+            <MudCarouselItem Transition="transition" Color="@Color.Primary">
+                <div class="d-flex" style="height:100%">
+                    <MudCardMedia Image="images/door.jpg" Height="200" />
+                </div>
+            </MudCarouselItem>
+            <MudCarouselItem Transition="transition" Color="@Color.Primary">
+                <div class="d-flex" style="height:100%">
+                    <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
+                </div>
+            </MudCarouselItem>
+        </MudCarousel>        
+        <MudCardContent>
+            <MudText Typo="Typo.h5">Old Paint</MudText>
+            <MudText Typo="Typo.body2">Old paint found on a stone house door.</MudText>
+            <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia.</MudText>
+        </MudCardContent>
+        <MudCardActions>
+            <MudButton Variant="Variant.Text" Color="Color.Primary">Share</MudButton>
+            <MudButton Variant="Variant.Text" Color="Color.Primary">Details</MudButton>
+        </MudCardActions>
+    </MudCard>*@
+
 }
 
 @code {
+
+    private bool arrows = true;
+    private bool bullets = true;
+    private bool enableSwipeGesture = true;
+    private bool autocycle = true;
+    private Transition transition = Transition.Slide;
 
     protected override void OnInitialized()
     {
