--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Ecommerce.UI.Client</MudText>
+            <MudText Typo="Typo.h6">Ecommerce.UI.Server</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
