--- a/Ecommerce.UI/Client/Shared/Product/ProductList.razor
+++ b/Ecommerce.UI/Client/Shared/Product/ProductList.razor
@@ -7,103 +7,20 @@
 }
 else
 {
-    @*<lu class="list-unstyled">
-        @foreach (var item in ProductService.Products.Products)
-        {
-            <li>
-                @foreach (var itemImg in @item.Images)
-                {
-                    <div>
-                        <a href="#">
-                            <img class="img-fluid rounded mx-auto d-block" src="@itemImg" alt="@item.Slug" />
-                        </a>
-                    </div>
-                }
-                <div>
-                    <a href="#">
-                        <h4 class="mb-0">@item.Slug</h4>
-                    </a>
-                    <p>@item.Slug </p>
-                    <h5 class="price">$@item.Quantity </h5>
-                </div>
-            </li>
-        }
-    </lu>*@
-
-    @*<MudCarousel Class="mud-width-full" Style="height:200px;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
-        <MudCarouselItem Transition="transition" Color="@Color.Primary">
-            <div class="d-flex" style="height:100%">
-                <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
-            </div>
-        </MudCarouselItem>
-        <MudCarouselItem Transition="transition" Color="@Color.Primary">
-            <div class="d-flex" style="height:100%">
-                <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
-            </div>
-        </MudCarouselItem>
-    </MudCarousel>
-    <MudSelect @bind-Value="transition" Label="Transition" Class="ma-2">
-        <MudSelectItem Value="@Transition.Fade">Fade</MudSelectItem>
-        <MudSelectItem Value="@Transition.Slide">Slide</MudSelectItem>
-        <MudSelectItem Value="@Transition.None">None</MudSelectItem>
-    </MudSelect>
-    <MudSwitch @bind-Checked="@arrows" Color="Color.Primary">Show Arrows</MudSwitch>
-    <MudSwitch @bind-Checked="@bullets" Color="Color.Primary">Show Bullets</MudSwitch>
-    <MudSwitch @bind-Checked="@enableSwipeGesture" Color="Color.Primary">Enable Swap Gesture</MudSwitch>
-    <MudSwitch @bind-Checked="@autocycle" Color="Color.Primary">Auto Cycle (Default: 5 secs)</MudSwitch>
-    *@
-
     @foreach (var item in ProductService.Products.Products)
     {
-        <MudCard Class="responsive img-fluid" Style="height:2%; width:25%; display: inline-flex;">
-            <MudCardContent Class="responsive">
-                <div>
+        <MudPaper Class="pa-4 ma-2 responsive d-inline-block" Elevation="5" Style="height:5%; width:20%; display: inline-block;">
+            <MudCard Class="responsive">
+                <MudCardContent Class="responsive">
                     <img class="responsive" src="@item.Images[0]" alt="teste">
-                </div>
-                <MudText Typo="Typo.body1">@item.Name</MudText>
-            </MudCardContent>
-            <MudCardActions Class="responsive" Style="display: inline-block;">
-                <MudButton Variant="Variant.Text" Color="Color.Primary">Details</MudButton>
-            </MudCardActions>
-        </MudCard>
+                    <MudText Class="responsive" Typo="Typo.body2">@item.Name</MudText>
+                </MudCardContent>
+                <MudCardActions Class="responsive">
+                    <MudButton Variant="Variant.Text" Color="Color.Primary">Details</MudButton>
+                </MudCardActions>
+            </MudCard>
+         </MudPaper>
     }
-
-    @*<MudCard>
-        <MudCardHeader>
-            <CardHeaderAvatar>
-                <MudAvatar Color="Color.Secondary">I</MudAvatar>
-            </CardHeaderAvatar>
-            <CardHeaderContent>
-                <MudText Typo="Typo.body1">Istra Croatia</MudText>
-                <MudText Typo="Typo.body2">Peninsula in Europe</MudText>
-            </CardHeaderContent>
-            <CardHeaderActions>
-                <MudIconButton Icon="@Icons.Material.Filled.Settings" Color="Color.Default" />
-            </CardHeaderActions>
-        </MudCardHeader>
-        <MudCarousel Class="mud-width-full" Style="height:200px;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
-            <MudCarouselItem Transition="transition" Color="@Color.Primary">
-                <div class="d-flex" style="height:100%">
-                    <MudCardMedia Image="images/door.jpg" Height="200" />
-                </div>
-            </MudCarouselItem>
-            <MudCarouselItem Transition="transition" Color="@Color.Primary">
-                <div class="d-flex" style="height:100%">
-                    <MudIcon Class="mx-auto my-auto" Icon="@Icons.Custom.Brands.MudBlazor" Size="@Size.Large" />
-                </div>
-            </MudCarouselItem>
-        </MudCarousel>        
-        <MudCardContent>
-            <MudText Typo="Typo.h5">Old Paint</MudText>
-            <MudText Typo="Typo.body2">Old paint found on a stone house door.</MudText>
-            <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia.</MudText>
-        </MudCardContent>
-        <MudCardActions>
-            <MudButton Variant="Variant.Text" Color="Color.Primary">Share</MudButton>
-            <MudButton Variant="Variant.Text" Color="Color.Primary">Details</MudButton>
-        </MudCardActions>
-    </MudCard>*@
-
 }
 
 @code {
@@ -125,6 +42,7 @@ else
         ProductService.ProductsChanged -= StateHasChanged;
     }
 
+    #region mapper
     //private static List<Product> Products = new List<Product>
     //{
     //    new Product
@@ -195,7 +113,7 @@ else
     //       }  // PEGI restrictions
     //       ,requirements = new Requirement
     //       {
-    //            Minimal = 
+    //            Minimal =
     //                new Minimal
     //                {
     //                    reqdiskspace = ""
@@ -211,7 +129,7 @@ else
     //                    reqsystem = ""
     //                }
 
-    //            , Recommended = 
+    //            , Recommended =
     //                new Recommended
     //                {
     //                    reqdiskspace = ""
@@ -226,7 +144,7 @@ else
     //                    ,
     //                    reqsystem = ""
     //                }
-                
+
     //       }// Requirements
     //       ,videos = new List<Video>
     //       {
@@ -247,4 +165,5 @@ else
     //       }  // Categories
     //    }
     //};
+    #endregion    
 }
