--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 @inject HttpClient Http
-@using Ecommerce.UI.Client.Shared
+@using Ecommerce.UI.Server.Shared
 
 <PageTitle>Weather forecast</PageTitle>
 
