--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using Ecommerce.UI.Client
-@using Ecommerce.UI.Client.Shared
+@using Ecommerce.UI.Server
+@using Ecommerce.UI.Server.Shared
